# web-geme

./: .dockerignore  API_CONTRACT.md  CLOUDFLARE_PAGES.md  Cargo.toml  DOCKER.md  Dockerfile.frontend  GAME_UI_GUIDE.md  README.md  SECURITY.md  Trunk.toml  _headers  docker-compose.yml  index.html  styles.css  sucai.md
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
docker/: nginx.conf
public/: asset_manifest.json  manifest.webmanifest  service-worker.js
scripts/: cloudflare-pages-build.sh
src/: main.rs
src/models/: README.md  mod.rs
src/modules/: README.md  game_2048.rs  make10.rs  match3.rs  mod.rs
