[package]
name = "huayuan-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "PointerEvent",
  "Storage",
  "Window",
] }
